add locale file updater